# fpd

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  Tiltfile  data_sources.yaml  rust-toolchain.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_issue.yml  config.yml
.github/workflows/: audit.yml  build.yml  build_test.yml  deploy_development.yml  deploy_release.yml  manual_fpd_deploy.yml  post_event.yml  release.yml  reusable_build_images.yml  reusable_deploy_development.yml  tag_release.yml
deployment/: deployment.template.yaml
deployment/local/: deployment.template.yaml  elasticsearch_deployment.yaml  elasticsearch_service.yaml  fluentd.template.yaml  fluentd.yaml  loki_deployment.yaml  loki_service.yaml  prometheus_deployment.yaml  prometheus_service.yaml
provider/: Cargo.toml
providers/: aws_cloudwatch.wasm  cloudwatch.wasm  elasticsearch.wasm  https.wasm  loki.wasm  parseable.wasm  prometheus.wasm  sentry.wasm
proxy/: Cargo.toml  README.md
proxy/src/: common.rs  data_sources.rs  main.rs  relay.rs  server.rs  service.rs  tests.rs
proxy_common/: Cargo.toml
proxy_types/: Cargo.toml
proxy_types/src/: lib.rs
scripts/: template.sh  template_all.sh  update_providers.sh
src/: cli.rs  common.rs  data_sources.rs  main.rs  providers.rs  runtime.rs  service.rs  tasks.rs  tests.rs
src/service/: bindings.rs  status_check.rs  tests.rs
src/service/bindings/: converters.rs
src/tasks/: metrics.rs  provider_manager.rs  service.rs  tests.rs  tokio_tungstenite_reconnect.rs
src/tasks/service/: bindings.rs  tests.rs
src/tasks/tokio_tungstenite_reconnect/: reconnecting_websocket.rs  websocket_keepalive.rs
src/tasks/tokio_tungstenite_reconnect/reconnecting_websocket/: tests.rs
src/tasks/tokio_tungstenite_reconnect/websocket_keepalive/: tests.rs
