[package]
name = "proxy"
version = "0.1.0"
edition = "2018"
description = "The Fiberplane Daemon enables secure communication between Fiberplane and your data sources using WebAssembly-based providers."
authors = ["Fiberplane <info@fiberplane.com>"]

[dependencies]
anyhow = "1.0.44"
async-channel = "1.8.0"
clap = { version = "4.1.4", features = ["derive", "env", "cargo", "help"] }
ctrlc = "3.2.1"
directories = "4.0.1"
fiberplane = { git = "ssh://git@github.com/fiberplane/fiberplane-rs.git", branch = "main", features = [
  "base64uuid-creation",
  "models",
  "provider-bindings",
  "provider-runtime"
] }
futures = "0.3.17"
http = "0.2.4"
hyper = { version = "0.14.12", features = ["full"] }
once_cell = "1.15.0"
prometheus = { version = "0.13", default-features = false }
reqwest = { version = "0.11.7", default-features = false, features = ["rustls-tls-native-roots"]}
rmp-serde = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
serde_yaml = "0.8.21"
thiserror = "1.0.38"
time = "0.3.14"
tokio = { version = "1.10.1", features = ["full"] }
tokio-tungstenite = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
url = "2.2.2"

[dev-dependencies]
httpmock = "0.6.6"
reqwest = { version = "0.11.7", default-features = false, features = [
  "rustls-tls",
] }
test-log = { version = "0.2.11", default-features = false, features = [
    "trace",
] }
tokio = { version = "1.10.1", features = ["full", "test-util"] }
tokio-tungstenite = { version = "*", features = ["rustls-tls-native-roots"] }
test-env-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "*", features = ["env-filter", "fmt"] }

[patch.'ssh://git@github.com/fiberplane/fiberplane-rs.git']
# fiberplane = { path = "../fiberplane-rs/fiberplane" }

[patch.crates-io]
#fp-bindgen-macros = { path = "../fp-bindgen/macros"}
#fp-bindgen-support = { path = "../fp-bindgen/fp-bindgen-support"}
#fp-bindgen-macros = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "main" }
#fp-bindgen-support = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "main" }
