[package]
name = "fpd"
version = "2.21.0-beta.1"
edition = "2018"
description = "The Fiberplane Daemon enables secure communication between Fiberplane and your data sources using WebAssembly-based providers."
authors = ["Fiberplane <info@fiberplane.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fiberplane/fpd"

[dependencies]
anyhow = "1.0.44"
async-channel = "1.8.0"
clap = { version = "4.1.4", features = ["derive", "env", "cargo", "help"] }
ctrlc = "3.2.1"
directories = "4.0.1"
duct = "0.13"
fiberplane = { version = "1.0.0-beta.9", features = [
  "base64uuid-creation",
  "models",
  "provider-bindings",
  "provider-runtime",
] }
flate2 = "1"
futures = "0.3.17"
http = "0.2.4"
hyper = { version = "0.14.26", features = ["full"] }
octocrab = { version = "0.23", default-features = false, features = ["rustls"] }
once_cell = "1.15.0"
prometheus = { version = "0.13", default-features = false }
reqwest = { version = "0.11.7", default-features = false, features = [
  "rustls-tls-native-roots",
] }
rmp-serde = "1.1.1"
secrecy = { version = "0.8.0", features = ["serde", "bytes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
serde_yaml = "0.8.21"
tar = "0.4"
thiserror = "1.0.38"
time = "0.3.14"
tokio = { version = "1.18.5", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = [
  "rustls-tls-native-roots",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
url = "2.2.2"
zip = "0.6"

[dev-dependencies]
httpmock = "0.6.6"
reqwest = { version = "0.11.7", default-features = false, features = [
  "rustls-tls",
] }
test-log = { version = "0.2.11", default-features = false, features = [
  "trace",
] }
tokio = { version = "1.18.5", features = ["full", "test-util"] }
test-env-log = { version = "0.2", default-features = false, features = [
  "trace",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[patch.crates-io]
#fiberplane = { git = "ssh://git@github.com/fiberplane/fiberplane.git", branch = "main" }
