[package]
name = "proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
clap = "=3.0.0-beta.4"
ctrlc = "3.2.1"
fp-provider-runtime = { git = "ssh://git@github.com/fiberplane/providers.git", branch = "main" }
futures = "0.3.17"
http = "0.2.4"
hyper = { version = "0.14.12", features = ["full"] }
proxy_types = { path = "../proxy_types" }
rmp-serde = "0.15.5"
routerify = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.21"
tokio = { version = "1.10.1", features = ["full"] }
tokio-tungstenite-reconnect = { git = "ssh://git@github.com/fiberplane/tokio-tungstenite-reconnect.git", branch = "main" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.2.2"

[dev-dependencies]
reqwest = { version = "0.11.6", features = ["rustls-tls"] }
test-env-log = { version = "0.2.7", default-features = false, features = ["trace"] }
tokio = { version = "1.10.1", features = ["full", "test-util"] }
tokio-tungstenite = { version = "0.16", features = ["rustls-tls-native-roots"] }
