[package]
name = "proxy_types"
version = "0.1.0"
edition = "2018"

[dependencies]
fp-provider-runtime = { git = "ssh://git@github.com/fiberplane/providers.git", branch = "main"  }
rmp-serde = "0.15.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
thiserror = "1.0.30"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
