[package]
name = "proxy_types"
version = "0.1.0"
edition = "2018"

[dependencies]
fiberplane = { git = "ssh://git@github.com/fiberplane/fiberplane-rs.git", branch = "single_player" }
rmp-serde = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1.0.30"
uuid = { version = "1.1.2", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "1.0.74"
